# two-tower-augmented-with-adaptive-mimic-mechanism

./: .gitignore  README.md  pyproject.toml
artifacts/reports/: benchmark_summary.md  embedding_diagnostics.json  recommendation_report.md
configs/: default.yaml
data/: books_trimmed.csv  users_trimmed.csv
docs/: architecture.md  how-does-it-work.md  nasil-calisir.md
scripts/: preprocess.py  train.py
src/: __init__.py
src/data/: __init__.py  datasets.py  features.py  indexers.py  loaders.py  preprocessing.py  samplers.py
src/evaluation/: __init__.py  embeddings.py  feature_correlation.py  metrics.py
src/models/: __init__.py  adaptive_mimic.py  encoders.py  two_tower.py
src/pipelines/: __init__.py  training.py
src/reporting/: __init__.py  plots.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_adaptive_mimic.py  test_config.py  test_encoders.py  test_features.py  test_indexers.py  test_metrics.py  test_preprocessing.py  test_reporting.py  test_samplers.py  test_training_utils.py
